syntax = "proto3";

package wso2.discovery.config.enforcer;

import "wso2/discovery/config/enforcer/cert.proto";
import "wso2/discovery/config/enforcer/service.proto";
import "wso2/discovery/config/enforcer/jwt_generator.proto";
import "wso2/discovery/config/enforcer/cache.proto";
import "wso2/discovery/config/enforcer/analytics.proto";
import "wso2/discovery/config/enforcer/security.proto";
import "wso2/discovery/config/enforcer/management.proto";
import "wso2/discovery/config/enforcer/filter.proto";
import "wso2/discovery/config/enforcer/tracing.proto";
import "wso2/discovery/config/enforcer/metrics.proto";
import "wso2/discovery/config/enforcer/soap.proto";
import "wso2/discovery/config/enforcer/client.proto";
option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/config/enforcer;enforcer";
option java_package = "org.wso2.apk.enforcer.discovery.config.enforcer";
option java_outer_classname = "ConfigProto";
option java_multiple_files = true;

// [#protodoc-title: Config]

// Enforcer config model
message Config {
    Security security = 1;

    CertStore keystore = 2;

    CertStore truststore = 3;

    Service authService = 4;

    JWTGenerator jwtGenerator = 5;

    Cache cache = 6;

    Analytics analytics = 7;

    Management management = 8;

    Tracing tracing = 9;

    Metrics metrics = 10;

    repeated Filter filters = 11;

    Soap soap = 12;

    bool mandateSubscriptionValidation = 13;

    HttpClient httpClient = 14;

    bool mandateInternalKeyValidation = 15;

    bool enableGatewayClassController = 16;

}
