syntax = "proto3";

package wso2.discovery.config.enforcer;

import "wso2/discovery/config/enforcer/thread_pool.proto";

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/config/enforcer;enforcer";
option java_package = "org.wso2.apk.enforcer.discovery.config.enforcer";
option java_outer_classname = "ServiceProto";
option java_multiple_files = true;

// [#protodoc-title: Service]

// Auth service model
message Service {
    int32 port = 1;

    int32 maxMessageSize = 2;

    int32 maxHeaderLimit = 3;

    // keep alive time of the external authz connection
    int32 keepAliveTime = 4;

    ThreadPool threadPool = 5;
}
